--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,13 @@
     }
   },
   "require": {
-    "php": ">=7.3",
+    "php": ">=8.1",
     "nikic/php-parser": "^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0"
+    "roave/security-advisories": "dev-latest"
+    ,
+    "phpunit/phpunit": "^9.0"
   },
   "extra": {
     "branch-alias": {
